@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.1497 2020/12/11 14:43:57 nia Exp $
+# $NetBSD: Makefile,v 1.1498 2020/12/14 03:35:23 mef Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
 
 SUBDIR+=	R-RCurl
 SUBDIR+=	R-curl
+SUBDIR+=	R-diffviewer
 SUBDIR+=	R-gh
 SUBDIR+=	R-htmlwidgets
 SUBDIR+=	R-httpuv
